-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Atlas Streams
-
Fully Compatible
-
ALL
-
Sprint 57
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Using a moved object
Using a moved object may lead to an unexpected/undefined behavior. An object is used after it's moved.
/src/mongo/db/modules/enterprise/src/streams/exec/window_assigner.h:32: USE_AFTER_MOVE 157943 "options" is moved (indicated by "std::move(options)").
/src/mongo/db/modules/enterprise/src/streams/exec/window_assigner.h:33: USE_AFTER_MOVE 157943 "options" is used after it has been already moved.