SERVER-94704: Fix for Coverity analysis defect 157943: Using a moved object (#26967)